changed background, fixed spacing for dropdowns, fixed card placement, changed color pallate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,98 @@
 /* styles for whole page */
 * {
   font-family: Andale Mono, monospace;
-  color: #e3f2fd;
 }
 /* background image style */
-.bg-image-container {
-  background-image: url("bg3.jpg");
+.bg {
+  background-image: url("Screenshot 2021-05-03 111539.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 /* nav bar style */
-nav {
+.top-nav {
   background-color: #424242;
 
   color: #f5f5f5;
 }
-
-.hero-body {
-  background-color: #616161;
-  opacity: 0.9;
+/* Add a black background color to the top navigation */
+.top-nav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-/* .space {
-  padding: 65px;
-} */
+/* Style the links inside the navigation bar */
+.top-nav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: right;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
+/* Change the color of links on hover */
+.top-nav a:hover {
+  background-color: #ddd;
+  color: #333333;
+}
+
+/* Add a color to the active/current link */
+.top-nav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
+#hero {
+  background-color: #5a636a;
+
+  opacity: 0.5;
+}
+
+.row {
+  display: table;
+  color: #000;
+  padding-left: 200px;
+  /* table-layout:initial; Optional */
+  border-spacing: 10px; /*Optional*/
+}
+.column {
+  border-radius: 12px;
+  display: table-cell;
+  background-color: #97a9bd;
+  opacity: 0.8;
+}
+.value {
+  border-radius: 12px;
+  color: #000;
+}
+
+.move {
+  padding-left: 475px;
+}
+
+.card-content {
+  background-color: #bec7b4;
+}
+
+.card-footer {
+  background-color: #bec7b4;
+}
 /* button style */
-button {
+
+/* .form-input {
   background-color: #616161;
-  color: #f5f5f5;
+  color: black;
   border-radius: 12px;
   font-size: 17px;
   padding: 10px 25px;
   text-align: center;
-}
+} */
 
 /* card style */
-#cards {
-  opacity: 0.75;
-}
+/* #cards {
+  opacity: 0.75; */
+/* height: 100%;
+  display: flex;
+  flex-direction: column; */
